8079343: Crash in PhaseIdealLoop with "assert(!had_error) failed: bad dominance"

C2 should not try to vectorize loops with loop variant vector base address.

Reviewed-by: kvn